story/static/css/base.css
ul {
	/*remove browser default left padding 40px and bullets*/
	padding-left: 0;
}

.navbar-default {
	/*Icons navbar size*/
	font-size: 26px;
	background-color: rgb(34, 34, 34);
}

.right {
	float:right;
}

.navbarList {
	margin: 0;
	padding: 10px 4px 9px 10px;
}
.navbarList > li {
	 display:inline;
}

html, body {
	text-shadow: none;
	/*cursor: auto;*/
	margin: 0;
	height: 100%;
	font-family: arial, serif;
}

.color-lor {
	background-color: #272c2d;
	color: #babdb6;
}


/*============== ONLY LOGIN.CSS =============*/
.userNameInput {
	background: rgba(0, 0, 0, 0);
	border: none !important;
	margin: 0 0;
	font-size: 22px; /*icons are 26 px + border, the bigger size will shit everything to bot*/
	padding: 0;
	width: 150px;
}

.username {
	font-size: 22px;
	padding-right: 10px;
}
/* ============= LOGIN DROPDOWN ==============*/
#hideableDropDown {
	border: 1px solid rgb(30, 30, 30);
	box-shadow: 3px 3px 7px #0E1011;
	border-radius: 2px;
	background-color: rgb(38, 36, 37);
}

#hideableDropDown > form> input {
	display: block;
	margin: 13px;
	width: 250px;
}

#hideableDropDown > form> input[type=button] {
	width: 268px;
}

.dropdown div {
	position: absolute;
	display: none;
	float: left;
	right: 5px;
}

.dropdown:hover div {
	display: block;
}


/* ================== COMMONS ======================*/
.biginputtext input:not([type=button]):not([type=submit]) {
	padding: 8px;
	margin: 5px 10px 5px 0;
	border-radius: 5px;
	font-size: 18px;
}

.biginputtext input[type=button], input[type=submit] {
	width: 100%;
}

/******************** INPUTS ********************/
.color-lor input[type=text], input[type=password], input[type=email], textarea, select, input[type=date] {
	background-color: #272c2d;
	border: 1px solid rgba(96, 90, 90, 0.31);
	color: #C7C7C7;
	padding-left: 5px;
}

.color-lor input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, textarea:focus, select:focus, input[type=date]:focus  {
	outline: none !important;
	border: 1px solid #5e5e60;
	box-shadow: 0 0 10px #55585b;
	color: #dddddd;
}

.color-lor input[type=button], input[type=submit] {
	background-color: rgb(62, 65, 58);
	color: #BABDB6;
	border: 1px solid transparent;
	border-radius: 3px;
	font-size: 18px;
	padding: 6px 12px;
	horiz-align: center;
}

.color-lor input[type=button]:hover, input[type=submit]:hover {
	color: #ffffff;
	background: linear-gradient(#79BC64, #578843) repeat scroll 0 0 transparent;
	border: 1px solid #48484a;
	box-shadow: 0 0 10px #55585b;
	cursor: pointer;
}

textarea {
	border-radius: 4px;
}

/*============== FONTELLO SETTINGS =================*/
.navbar-default [class^='icon-'] {
	margin: 2px;
}
[class^='icon-']:hover {
	cursor: pointer;
	text-shadow: 0 0 0.2em #FFF, 0 0 0.2em #3D3D3D;
}
[class^='icon-volume'] { color: rgb(138, 109, 59); }
.icon-home { color: rgb(51, 122, 183); }
.icon-pencil { color: rgb(85, 26, 139); }
.icon-users { color: rgb(77, 111, 67); }
.icon-login { color: rgb(60, 118, 61); }
.icon-register { color: rgb(138, 109, 59); }
.icon-sign-out { color: rgb(169, 68, 66); }
.icon-wrench { color: rgb(70, 133, 117); }
.icon-clear { color: rgb(142, 53, 84); }
.icon-man {color: rgb(84, 151, 83)
}
.icon-girl { color: #bb686a; }
.icon-anonymous { color: #C2C2C2; }
.icon-user-secret { color: rgb(92, 148, 163); }


/*================= SCROLLBAR ==================== */
html, body{
	/*IE scroll*/
	scrollbar-base-color: #3E4654;
	scrollbar-3dlight-color: #7dc071;
	scrollbar-highlight-color: #c08b00;
	scrollbar-track-color: #222;
	scrollbar-arrow-color: #3c763d;
}

::-webkit-scrollbar {
	height: 12px;
	width: 6px;
	background: #222;;
}

::-webkit-scrollbar-thumb {
	background: #3E4654;
	-webkit-border-radius: 1ex;
}


/*=============== BROWSER SPECIFIC ================ */
/*Remove annoying chromium autofill yellow background*/
input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
	-webkit-box-shadow: 0 0 0 1000px #30302A inset !important;
	-webkit-text-fill-color: #CCCBDF;
}
.navbar-default {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
/*::-webkit-inner-spin-button { display: none; }*/
::-webkit-calendar-picker-indicator { background: rgb(186, 189, 182); } /*lor text*/
::-webkit-calendar-picker-indicator { background: rgb(39, 44, 45); } /*lor background*/
::-webkit-inner-spin-button { display: none; }

/* ====================== PROFILE.CSS ================= */
.img {
	float: left;
	max-width: 96%;
	min-width: 40%;
	height: auto;
	padding-left: 15px;
	/*padding-right: 20px;*/
}
.profile {
	margin-top: 10px;
	position: relative;
}

.padded15 {
	padding: 15px;
}

